syntax = "proto3";

package pb;

option go_package = "grpc/proto/pb";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message UpdateUserRequest {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
}